--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
   </div>
 
   <div class="letter" id="openLetter">
-    💌 A Letter for You
+    💌 I’ve been learning this because the lyrics remind me so much of how lucky I feel to have you. I wanted to dedicate it to you tonight.
     <span>(press it)</span>
   </div>
 
-  <!-- Video Modal -->
   <div class="modal" id="modal">
     <div class="modal-content">
       <video controls playsinline>
