--- a/index.html
+++ b/index.html
@@ -3,32 +3,47 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Be My Valentine 💖</title>
+  <title>Be My Valentine </title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h1>Will you be my Valentine, Baby?</h1>
+  
+  <div class="hearts"></div>
 
-  <div class="buttons">
-    <button id="yesBtn">Yes </button>
-    <button id="noBtn">No </button>
+  <div class="container" id="mainContent">
+    <h1>Will you be my Valentine?</h1>
+
+    <div class="buttons">
+      <button id="yesBtn">Yes </button>
+      <button id="noBtn">No </button>
+    </div>
+
+    <div class="letter" id="openLetter">
+      💌 I’ve been learning this because the lyrics remind me so much of how lucky I feel to have you. I wanted to dedicate it to you tonight.
+      <span>(click me)</span>
+    </div>
   </div>
 
-  <div class="letter" id="openLetter">
-    💌 I’ve been learning this because the lyrics remind me so much of how lucky I feel to have you. I wanted to dedicate it to you tonight.
-    <span>(press it)</span>
+  
+  <div class="success hidden" id="success">
+    <h1>YEYY HEHEHE I LOVE YOU BABY </h1>
+    <p>I can’t wait to spend Valentine’s Day with you </p>
+    <img src="https://media.giphy.com/media/l4FGpPki5v2Bcd6Ss/giphy.gif" alt="cute gif">
   </div>
 
   <div class="modal" id="modal">
     <div class="modal-content">
       <video controls playsinline>
         <source src="your-video.mp4" type="video/mp4">
-        Your browser does not support the video tag.
       </video>
       <button class="close" id="closeModal">Close</button>
     </div>
   </div>
+
+  <audio id="music">
+    <source src="your-music.mp3" type="audio/mp3">
+  </audio>
 
   <script src="script.js"></script>
 </body>
