--- a/index.html
+++ b/index.html
@@ -3,20 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Be My Valentine </title>
+  <title>Be My Valentine 💖</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  
-  <div class="hearts"></div>
 
   <div class="container" id="mainContent">
     <h1>Will you be my Valentine?</h1>
 
     <div class="buttons">
-      <button id="yesBtn">Yes </button>
-      <button id="noBtn">No </button>
+      <button id="yesBtn">Yes</button>
+      <button id="noBtn">No</button>
     </div>
 
     <div class="letter" id="openLetter">
@@ -25,14 +23,14 @@
     </div>
   </div>
 
-  
   <div class="success hidden" id="success">
     <h1>YEYY HEHEHE I LOVE YOU BABY </h1>
-    <p>I can’t wait to spend Valentine’s Day with you </p>
+    <p>I can’t wait to spend Valentine’s Day with you</p>
     <img src="https://media.giphy.com/media/l4FGpPki5v2Bcd6Ss/giphy.gif" alt="cute gif">
   </div>
 
-  <div class="modal" id="modal">
+
+  <div class="modal hidden" id="modal">
     <div class="modal-content">
       <video controls playsinline>
         <source src="your-video.mp4" type="video/mp4">
@@ -40,8 +38,7 @@
       <button class="close" id="closeModal">Close</button>
     </div>
   </div>
-
-  <audio id="music">
+ <audio id="music">
     <source src="your-music.mp3" type="audio/mp3">
   </audio>
 
