--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
     <div class="envelope" onclick="openVideo()">
       <div class="letter">
-        💌 I learned this because the lyrics remind me of how lucky I feel to have you.
+        💌 I learned this because the lyrics remind me of how lucky I am to have you.
         <br><br>
         <strong>(Click to open)</strong>
       </div>
